[gd_scene load_steps=10 format=2]

[ext_resource path="res://Projectiles/EnemyProjectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Ship/EnemyShip.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Ship/EnemyShip.pxo" type="Texture" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float curvature: hint_range(-1, 1);

void vertex() {
	VERTEX.y -= VERTEX.x * -curvature * 0.15;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/curvature = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.82472, 3.44661 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.177778, 0.385185, 1 )
colors = PoolColorArray( 0.985965, 0.959005, 0.959005, 1, 0.759402, 0.649885, 0.468693, 1, 0.937255, 0.654902, 0.137255, 1, 0.937255, 0.654902, 0.137255, 0.415686 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[node name="EnemyShip" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
projectile_path = ExtResource( 1 )
hp = 5

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.2
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DirectionTween" type="Tween" parent="."]

[node name="LeftCanon" type="Position2D" parent="."]
position = Vector2( 4.5, 3.5 )

[node name="RightCanon" type="Position2D" parent="."]
position = Vector2( -4.5, 3.5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -2 )
amount = 15
lifetime = 0.3
randomness = 0.5
process_material = SubResource( 4 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
